# cmake_minimum_required(VERSION <specify CMake version here>)
project(Algorithm_Devlopement)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Algorithm_Devlopement main.cpp)
#add_executable(Algorithm_Devlopement Algorithm-Basic-Tutorial/ch1/mergesort_template.cpp)
#add_executable(Algorithm_Devlopement Algorithm-Basic-Tutorial/ch1/bigInteger_add_template.cpp)
#add_executable(Algorithm_Devlopement Algorithm-Basic-Tutorial/ch1/bigInteger_minus_template.cpp)
#add_executable(Algorithm_Devlopement Algorithm-Basic-Tutorial/ch1/bigInteger_mul_template.cpp)
#add_executable(Algorithm_Devlopement Algorithm-Basic-Tutorial/ch1/prefix_sum_1D.cpp)
#add_executable(Algorithm-Basic-Tutorial Algorithm-Basic-Tutorial/ch3/arrange-numbers.cpp)
add_executable(Algorithm-Basic-Tutorial Algorithm-Basic-Tutorial/ch1/binnumber_count_1.cpp Algorithm-Basic-Tutorial/ch1/interval_sum.cpp Algorithm-Basic-Tutorial/ch1/interval_combination.cpp Algorithm-Basic-Tutorial/ch1/range_of_number.cpp)
#add_executable(Algorithm-Basic-Tutorial Algorithm-Basic-Tutorial/ch3/n-queens2.cpp)